<resources>
    <string name="app_name">ETI</string>
    <string name="login">Login to ETI</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_clear_mem_cache">Clear memory cache</string>
    <string name="action_load_next_page">Load Next Page</string>
    <string name="action_star_topic">Star Topic</string>
    <string name="action_unstar_topic">Unstar Topic</string>

    <string name="title_activity_main">Topic List</string>
    <string name="title_activity_message_list">Message List</string>
    <string name="title_activity_board_list">Bookmarks</string>

    <string name="post_topic">Post Topic</string>
    <string name="post_message">Post Message</string>
    <string name="reply">Reply</string>

    <string name="hint_message">Enter your message text</string>

    <string name="menu_quote">Quote</string>
    <string name="menu_highlight">Highlight</string>
    <string name="menu_ignore">Ignore</string>

    <string name="continued_next_page">Continued on page </string>
    <string name="new_message"> new PM</string>
    <string name="new_messages"> new PMs</string>
    <string name="read">Read</string>

    <string name="error_5_chars_or_more">Your message must be at least 5 characters</string>
    <string name="error_message_failed">Post failed</string>

    <string name="post_message_ok">Message posted</string>

    <string name="arrow">➤</string>

    <string name="bookmarks">Bookmarks</string>
    <string name="drawer_open">Open bookmarks</string>
    <string name="drawer_close">Close bookmarks</string>

    <string name="preferences_general">General</string>
    <string name="preferences_topics">Topics</string>

    <string name="preferences_reload_bookmarks">Reload bookmarks</string>
    <string name="preferences_clear_cache">Clear cache</string>

    <string name="preferences_global_chat_ui">Use Chat UI inside topics</string>

    <string name="preferences_reuse_session">Reuse session tokens</string>
    <string name="preferences_reuse_session_summary">Do not enable if you login to your account on multiple computers using the same IP address.</string>

    <string name="preferences_ignorator_enable">Enable ignorator</string>
    <string name="preferences_ignorator_summary">Hides topics created by users defined below</string>

    <string name="preferences_ignorator_list">Users to ignore:</string>
    <string name="preferences_ignorator_default"> </string>
    <string name="preferences_ignorator_message">Enter comma-separated list of usernames to ignore:</string>

</resources>
