<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MessageListActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/action_refresh_message_list"
        android:title="@string/action_refresh"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item android:id="@+id/action_clear_mem_cache"
        android:title="@string/action_clear_mem_cache"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item android:id="@+id/action_toggle_star"
        android:title="@string/action_star_topic"
        android:icon="@drawable/empty_star"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"/>
</menu>
