<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.TopicListActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh_inbox"
        android:icon="@drawable/ic_refresh_grey600_36dp"
        android:title="@string/action_refresh"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
</menu>
